# xilinx-ethash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
test/: main.cpp
xleth/: Makefile
xleth/config/: connectivity_u50.ini
xleth/kernel/: ethash-01112021.cl  ethash-08222020.cl  ethash.cl
xleth/src/: xleth.cpp  xleth.hpp
xleth/xclbin/: ethash.sw_emu.xclbin
